--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@cucumber/pretty-formatter": "^2.0.1",
     "@playwright/test": "^1.54.2",
     "@types/node": "^24.2.1",
+    "allure-commandline": "^2.34.1",
     "allure-cucumberjs": "^3.3.3",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
