--- a/.github/workflows/playwright-cucumber.yml
+++ b/.github/workflows/playwright-cucumber.yml
@@ -1,4 +1,4 @@
-name: Playwright + Cucumber BDD (Allure to Pages)
+name: Playwright + Cucumber BDD (with Allure)
 
 on:
   push:
@@ -6,11 +6,6 @@ on:
   pull_request:
     branches: [ "*" ]
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-# Permissions: add Pages deploy rights
 permissions:
   contents: read
   pages: write
@@ -19,8 +14,6 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,7 +22,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -37,40 +30,17 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # --- ENV: write secrets to .env (add more lines if you have more vars)
-      - name: Create .env for CI
-        run: |
-          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" > .env
-
-      - name: Prepare result dirs
-        run: mkdir -p results allure-results
-
       - name: Run Cucumber Tests
-        env:
-          API_BASE_URL: ${{ secrets.API_BASE_URL }}
-        run: npx cucumber-js --config cucumber.cjs
+        run: npx cucumber-js --require cucumber.cjs
 
-      # --- Allure (requires devDep: allure-commandline)
       - name: Generate Allure Report
         if: always()
         run: npx allure-commandline generate ./allure-results --clean --output ./allure-report
 
-      # Keep artifacts for download/debug
-      - name: Upload Allure Results (JSON)
+      - name: Configure Pages
         if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results
-          path: allure-results
+        uses: actions/configure-pages@v5
 
-      - name: Upload Allure HTML (artifact)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
-
-      # Publish Allure HTML to GitHub Pages
       - name: Upload Pages artifact
         if: always()
         uses: actions/upload-pages-artifact@v3
@@ -79,7 +49,7 @@ jobs:
 
   deploy:
     needs: test
-    if: always()   # publish even if tests fail, so you can inspect the report
+    if: always()
     runs-on: ubuntu-latest
     environment:
       name: github-pages
