--- a/.github/workflows/playwright-cucumber.yml
+++ b/.github/workflows/playwright-cucumber.yml
@@ -1,4 +1,4 @@
-name: Playwright + Cucumber BDD (with Allure)
+name: Playwright + Cucumber BDD (Allure → Pages)
 
 on:
   push:
@@ -11,27 +11,47 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
 
-      - name: Install dependencies
+      - name: Install deps
         run: npm ci
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      # ✅ put your secrets into a .env so dotenv can load them
+      - name: Create .env for CI
+        run: |
+          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" > .env
+
+      # (one-time) quick sanity print; safe/masked
+      - name: Verify .env
+        run: |
+          echo ".env bytes: $(wc -c < .env)"
+          head -n1 .env | sed 's/=.*/=<masked>/'
+
+      - name: Prepare result dirs
+        run: mkdir -p results allure-results
+
+      # ✅ use --config (not --require); pass env directly too
       - name: Run Cucumber Tests
-        run: npx cucumber-js --require cucumber.cjs
+        env:
+          API_BASE_URL: ${{ secrets.API_BASE_URL }}
+        run: npx cucumber-js --config cucumber.cjs --format progress --backtrace
 
       - name: Generate Allure Report
         if: always()
@@ -49,7 +69,7 @@ jobs:
 
   deploy:
     needs: test
-    if: always()
+    if: always() # publish even if tests fail so you can inspect the report
     runs-on: ubuntu-latest
     environment:
       name: github-pages
