--- a/.github/workflows/playwright-cucumber.yml
+++ b/.github/workflows/playwright-cucumber.yml
@@ -2,9 +2,9 @@ name: Playwright + Cucumber BDD (Allure → Pages)
 
 on:
   push:
-    branches: [ main, develop ]     # deploy from these
+    branches: [ develop, main ]     # deploy from these
   pull_request:
-    branches: [ "*" ]               # test only
+    branches: [ develop, main ]     # test only (no deploy)
 
 permissions:
   contents: read
@@ -36,10 +36,8 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # Put secrets into .env so dotenv loads them (add more lines if needed)
       - name: Create .env for CI
-        run: |
-          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" > .env
+        run: echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" > .env
 
       - name: Prepare result dirs
         run: mkdir -p results allure-results
@@ -49,12 +47,11 @@ jobs:
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
         run: npx cucumber-js --config cucumber.cjs --format progress --backtrace
 
-      # --- Allure (requires devDep: allure-commandline)
       - name: Generate Allure Report
         if: always()
         run: npx allure-commandline generate ./allure-results --clean --output ./allure-report
 
-      # Keep artifacts for download/debugging
+      # Artifacts (optional but handy)
       - name: Upload Allure Results (JSON)
         if: always()
         uses: actions/upload-artifact@v4
@@ -69,7 +66,7 @@ jobs:
           name: allure-report
           path: allure-report
 
-      # Prepare static site for Pages (uploaded even on PRs; deploy happens only on push)
+      # Prep Pages artifact (created for both PR and push; deploy happens only on push)
       - name: Configure Pages
         if: always()
         uses: actions/configure-pages@v5
@@ -82,8 +79,7 @@ jobs:
 
   deploy:
     needs: test
-    # ✅ Only deploy on push (skip for pull_request)
-    if: ${{ github.event_name != 'pull_request' }}
+    if: ${{ github.event_name == 'push' }}   # ← only deploy for push events
     runs-on: ubuntu-latest
     environment:
       name: github-pages
