--- a/.github/workflows/playwright-cucumber.yml
+++ b/.github/workflows/playwright-cucumber.yml
@@ -2,9 +2,9 @@ name: Playwright + Cucumber BDD (Allure → Pages)
 
 on:
   push:
-    branches: [ develop, main ]     # deploy from these
+    branches: [ develop, main ]        # deploy from these
   pull_request:
-    branches: [ develop, main ]     # test only (no deploy)
+    branches: [ develop, main ]        # test only
 
 permissions:
   contents: read
@@ -19,13 +19,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
@@ -33,25 +30,26 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright Browsers
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      # secrets → .env so dotenv loads them (add more if you have them)
       - name: Create .env for CI
         run: echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" > .env
 
       - name: Prepare result dirs
         run: mkdir -p results allure-results
 
-      - name: Run Cucumber Tests
+      - name: Run Cucumber tests
         env:
           API_BASE_URL: ${{ secrets.API_BASE_URL }}
         run: npx cucumber-js --config cucumber.cjs --format progress --backtrace
 
-      - name: Generate Allure Report
+      - name: Generate Allure HTML
         if: always()
         run: npx allure-commandline generate ./allure-results --clean --output ./allure-report
 
-      # Artifacts (optional but handy)
+      # Artifacts (handy for download/debug)
       - name: Upload Allure Results (JSON)
         if: always()
         uses: actions/upload-artifact@v4
@@ -66,7 +64,7 @@ jobs:
           name: allure-report
           path: allure-report
 
-      # Prep Pages artifact (created for both PR and push; deploy happens only on push)
+      # Prepare static site for Pages (upload on both PR/push; deploy happens only on push)
       - name: Configure Pages
         if: always()
         uses: actions/configure-pages@v5
@@ -79,7 +77,7 @@ jobs:
 
   deploy:
     needs: test
-    if: ${{ github.event_name == 'push' }}   # ← only deploy for push events
+    if: ${{ github.event_name == 'push' }}   # only publish on push
     runs-on: ubuntu-latest
     environment:
       name: github-pages
